// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Test Rna Editor Expanded component should render correctly in edit mode 1`] = `
<div
  class="css-14aaixu-RnaEditorExpandedContainer e18wzlbg12"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-14mu1ht-CompactViewName e18wzlbg11"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value=""
  />
  <div
    class="css-j61q7d-GroupsContainer e18wzlbg10"
  >
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-3nbhd2-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="12.6"
            rx="1.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="12.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-1y33dqi-CompactGroupText e1ie5fzr0"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-3nbhd2-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.248 1.012a1.064 1.064 0 011.504 0l6.236 6.236c.416.415.416 1.089 0 1.504l-6.236 6.236a1.064 1.064 0 01-1.504 0L1.012 8.752a1.064 1.064 0 010-1.504l6.236-6.236z"
            stroke="currentColor"
            stroke-width="1.4"
          />
        </svg>
      </div>
      <p
        class="css-1y33dqi-CompactGroupText e1ie5fzr0"
      >
        Base
      </p>
    </div>
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-3nbhd2-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14.6"
            rx="7.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="14.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-1y33dqi-CompactGroupText e1ie5fzr0"
      >
        Phosphate
      </p>
      <div
        class="phosphatePositionIconWrapperOnPresetCard"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="phosphatePositionTrigger"
            type="button"
          >
            <div
              class="phosphatePositionIconWrapper"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1.312 1.313c0-.208.168-.375.375-.375h3.375c.208 0 .375.167.375.375v3.375a.375.375 0 01-.375.375H1.687a.375.375 0 01-.375-.375V1.313zM3.11 6.239a.375.375 0 01.53 0l2.122 2.12a.375.375 0 010 .531L3.64 11.011a.375.375 0 01-.53 0L.99 8.892a.375.375 0 010-.531L3.11 6.239z"
                  fill="#CAD3DD"
                />
                <path
                  d="M11.25 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z"
                  fill="#167782"
                />
              </svg>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1bxz7gs-ButtonsContainer e18wzlbg5"
  >
    <button
      class="e18wzlbg4 css-1enajpt-StyledButton"
      data-testid="cancel-btn"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="e18wzlbg4 css-8nc6u3-StyledButton"
      data-mui-internal-clone-element="true"
      data-testid="add-to-presets-btn"
      disabled=""
    >
      Add to Presets
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component should render correctly in edit mode with modification of sequence 1`] = `
<div
  class="rna-editor-expanded--sequence-edit-mode css-14aaixu-RnaEditorExpandedContainer e18wzlbg12"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-14mu1ht-CompactViewName e18wzlbg11"
    data-testid="name-your-structure-editbox"
    disabled=""
    placeholder="Name your structure"
    value="2 nucleotides"
  />
  <div
    class="css-j61q7d-GroupsContainer e18wzlbg10"
  >
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-pxz0s9-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="12.6"
            rx="1.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="12.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-iagnq6-CompactGroupText e1ie5fzr0"
      >
        R
      </p>
    </div>
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-pxz0s9-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.248 1.012a1.064 1.064 0 011.504 0l6.236 6.236c.416.415.416 1.089 0 1.504l-6.236 6.236a1.064 1.064 0 01-1.504 0L1.012 8.752a1.064 1.064 0 010-1.504l6.236-6.236z"
            stroke="currentColor"
            stroke-width="1.4"
          />
        </svg>
      </div>
      <p
        class="css-iagnq6-CompactGroupText e1ie5fzr0"
      >
        [multiple]
      </p>
    </div>
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-pxz0s9-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14.6"
            rx="7.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="14.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-iagnq6-CompactGroupText e1ie5fzr0"
      >
        P
      </p>
      <div
        class="phosphatePositionIconWrapperOnPresetCard"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="phosphatePositionTrigger"
            type="button"
          >
            <div
              class="phosphatePositionIconWrapper"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1.312 1.313c0-.208.168-.375.375-.375h3.375c.208 0 .375.167.375.375v3.375a.375.375 0 01-.375.375H1.687a.375.375 0 01-.375-.375V1.313zM3.11 6.239a.375.375 0 01.53 0l2.122 2.12a.375.375 0 010 .531L3.64 11.011a.375.375 0 01-.53 0L.99 8.892a.375.375 0 010-.531L3.11 6.239z"
                  fill="#CAD3DD"
                />
                <path
                  d="M11.25 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z"
                  fill="#167782"
                />
              </svg>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1bxz7gs-ButtonsContainer e18wzlbg5"
  >
    <button
      class="e18wzlbg4 css-1enajpt-StyledButton"
      data-testid="cancel-btn"
    >
      Cancel
    </button>
    <button
      aria-label=""
      class="e18wzlbg4 css-8nc6u3-StyledButton"
      data-mui-internal-clone-element="true"
      data-testid="save-btn"
      disabled=""
    >
      Update
    </button>
  </div>
</div>
`;

exports[`Test Rna Editor Expanded component should render correctly in view mode 1`] = `
<div
  class="css-14aaixu-RnaEditorExpandedContainer e18wzlbg12"
  data-testid="rna-editor-expanded"
>
  <input
    class="css-14mu1ht-CompactViewName e18wzlbg11"
    data-testid="name-your-structure-editbox"
    placeholder="Name your structure"
    value="MyRna"
  />
  <div
    class="css-j61q7d-GroupsContainer e18wzlbg10"
  >
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--sugar"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-3nbhd2-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="14"
          viewBox="0 0 14 14"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="12.6"
            rx="1.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="12.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-1y33dqi-CompactGroupText e1ie5fzr0"
      >
        Sugar
      </p>
    </div>
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--base"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-3nbhd2-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.248 1.012a1.064 1.064 0 011.504 0l6.236 6.236c.416.415.416 1.089 0 1.504l-6.236 6.236a1.064 1.064 0 01-1.504 0L1.012 8.752a1.064 1.064 0 010-1.504l6.236-6.236z"
            stroke="currentColor"
            stroke-width="1.4"
          />
        </svg>
      </div>
      <p
        class="css-1y33dqi-CompactGroupText e1ie5fzr0"
      >
        Base
      </p>
    </div>
    <div
      class="css-qgalma-CompactGroupBlockContainer e1ie5fzr2"
      data-testid="rna-builder-slot--phosphate"
    >
      <div
        class="css-1wxlg71-CompactGroupConnection e1ie5fzr1"
      />
      <div
        class="css-18tu4f5-GroupIconContainer e1ie5fzr4"
      >
        <svg
          class="css-3nbhd2-GroupIcon e1ie5fzr3"
          fill="currentColor"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14.6"
            rx="7.3"
            stroke="currentColor"
            stroke-width="1.4"
            width="14.6"
            x="0.7"
            y="0.7"
          />
        </svg>
      </div>
      <p
        class="css-1y33dqi-CompactGroupText e1ie5fzr0"
      >
        Phosphate
      </p>
      <div
        class="phosphatePositionIconWrapperOnPresetCard"
      >
        <span
          aria-label="Phosphate on the right"
          class=""
          data-mui-internal-clone-element="true"
        >
          <button
            aria-label="Select phosphate position"
            class="phosphatePositionTrigger"
            disabled=""
            type="button"
          >
            <div
              class="phosphatePositionIconWrapper"
            >
              <svg
                fill="none"
                height="12"
                viewBox="0 0 12 12"
                width="12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1.312 1.313c0-.208.168-.375.375-.375h3.375c.208 0 .375.167.375.375v3.375a.375.375 0 01-.375.375H1.687a.375.375 0 01-.375-.375V1.313zM3.11 6.239a.375.375 0 01.53 0l2.122 2.12a.375.375 0 010 .531L3.64 11.011a.375.375 0 01-.53 0L.99 8.892a.375.375 0 010-.531L3.11 6.239z"
                  fill="#CAD3DD"
                />
                <path
                  d="M11.25 3a2.25 2.25 0 11-4.5 0 2.25 2.25 0 014.5 0z"
                  fill="#167782"
                />
              </svg>
            </div>
          </button>
        </span>
      </div>
    </div>
  </div>
  <div
    class="css-1bxz7gs-ButtonsContainer e18wzlbg5"
  >
    <button
      class="e18wzlbg4 css-1enajpt-StyledButton"
      data-testid="duplicate-btn"
    >
      Duplicate and Edit
    </button>
    <button
      class="e18wzlbg4 css-1enajpt-StyledButton"
      data-testid="edit-btn"
    >
      Edit
    </button>
  </div>
</div>
`;
